--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@nuxtjs/color-mode": "^3.5.2"
   }
 }
