--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/seo": "^3.0.3",
     "@tailwindcss/vite": "^4.1.4",
     "@vueuse/core": "^13.1.0",
+    "bootstrap-icons": "^1.11.3",
     "nuxt": "^3.16.2",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
