--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@nuxt/icon": "^1.12.0",
     "@nuxtjs/seo": "^3.0.3",
+    "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.4",
     "@vueuse/core": "^13.1.0",
     "bootstrap-icons": "^1.11.3",
     "nuxt": "^3.16.2",
+    "pinia": "^3.0.2",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
