--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/icon": "^1.12.0",
-    "@nuxtjs/seo": "^3.0.3",
+    "@nuxt/image": "^1.10.0",
     "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.4",
     "@vueuse/core": "^13.1.0",
