--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "@vueuse/core": "^13.1.0",
     "bootstrap-icons": "^1.11.3",
+    "motion-v": "^1.0.0",
     "nuxt": "^3.16.2",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.4",
